package carnet.controleur;

import carnet.model.Carnet;

public interface Observateur {
    void reagir();
}
